--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".ContactAdditionActivity" />
-        <activity android:name=".ContactInformationActivity"></activity>
+        <activity android:name=".ContactInformationActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
